# moredakka

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  moredakka.toml  moredakka.toml.example  pyproject.toml
.agents/skills/moredakka/: SKILL.md
.agents/skills/moredakka/references/: moredakka-contract.md
.github/workflows/: ci.yml
crates/moredakka-core/: Cargo.toml
crates/moredakka-core/src/: config.rs  context.rs  doctor.rs  main.rs  util.rs
docs/plans/: 2026-04-12-canonical-usability-and-rust-slice.md  2026-04-12-premium-hardening-tranche-1.md  2026-04-14-beauty-rust-canonicalization-plan.md
evals/: README.md  moredakka.prompts.csv
src/moredakka/: __main__.py  cli.py  config.py  context.py  doctor.py  errors.py  orchestrator.py  problem_surface.py  query_language.py  query_plan.py  report.py  roles.py  runlog.py  schemas.py  surface_registry.py  util.py
src/moredakka/prompts/: breaker.md  implementer.md  minimalist.md  planner.md  synthesizer.md
src/moredakka/providers/: __init__.py  base.py  gemini_provider.py  openai_provider.py  openrouter_provider.py
src/moredakka/surfaces/: __init__.py  repo.py
tests/: test_cli.py  test_config.py  test_context.py  test_default_roster.py  test_doctor.py  test_doctor_repo.py  test_env_loading.py  test_openrouter_schema_sanitization.py  test_orchestrator.py  test_provider_timeouts.py  test_providers_openrouter.py  test_query_language.py  test_report.py  test_runlog.py  test_schemas.py
